attempt 1 to fix dark mode

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,29 +38,6 @@ body.sticky-bottom-footer {
   }
 }
 
-// TODO: redefine content layout.
-/* Blockquote styles for courses */
-blockquote.pastel-yellow {
-  color: #FFF9C4;
-}
-
-blockquote.pastel-green {
-  color: #C8E6C9;
-}
-
-blockquote.pastel-blue {
-  color: #BBDEFB;
-}
-
-blockquote.pastel-pink {
-  color: #F8BBD0;
-}
-
-blockquote.current-course {
-  font-weight: bold;
-  font-style: italic;
-}
-
 /******************************************************************************
  * Publications
  ******************************************************************************/
